[package]
name = "coldsnap"
version = "0.6.0"
description = "A library and command-line interface for uploading and downloading Amazon EBS snapshots"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/awslabs/coldsnap"
keywords = ["AWS", "Amazon", "EBS", "snapshot"]

[features]
default = ["aws-sdk-rust-rustls"]
aws-sdk-rust-rustls = [ "aws-config/rustls", "aws-sdk-ebs/rustls", "aws-sdk-ec2/rustls" ]

[dependencies]
argh = "0.1"
async-trait = "0.1"
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-ebs = "1.4"
aws-sdk-ec2 = "1.4"
aws-types = "1.0"
base64 = "0.21"
bytes = "1"
env_logger = "0.10"
futures = "0.3"
indicatif = "0.17"
log = "0.4"
nix = { version = "0.27", default-features = false, features = ["ioctl"] }
sha2 = "0.10"
snafu = "0.7"
tempfile = "3"
tokio = { version = "1", features = [ "fs", "io-util", "time", "macros", "rt-multi-thread"] }
