[package]
name = "coldsnap"
version = "0.6.1"
description = "A library and command-line interface for uploading and downloading Amazon EBS snapshots"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/awslabs/coldsnap"
keywords = ["AWS", "Amazon", "EBS", "snapshot"]

[features]
# This feature is for backward compatibility but has no effect.
default = ["aws-sdk-rust-rustls"]
aws-sdk-rust-rustls = [ "aws-config/rustls", "aws-sdk-ebs/rustls", "aws-sdk-ec2/rustls" ]

[dependencies]
argh = "0.1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ebs = "1"
aws-sdk-ec2 = "1"
aws-types = "1"
base64 = "0.22"
bytes = "1"
env_logger = "0.11"
futures = "0.3"
indicatif = "0.17"
log = "0.4"
nix = { version = "0.28", default-features = false, features = ["ioctl"] }
sha2 = "0.10"
snafu = "0.8"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
